--- a/javascript/ex02.html
+++ b/javascript/ex02.html
@@ -19,5 +19,8 @@
 </head>
 <body>
     <div class="box"></div>
+    <div class="box"></div>
+    <button class="backward">backward</button>
+    <button class="forward">forward</button>
 </body>
 </html>
