--- a/javascript/ex03.html
+++ b/javascript/ex03.html
@@ -25,5 +25,8 @@
 </head>
 <body>
     <div class="box"></div>
+    <div class="box"></div>
+    <button class="backward">backward</button>
+    <button class="forward">forward</button>
 </body>
 </html>
