--- a/javascript/ex04.html
+++ b/javascript/ex04.html
@@ -28,5 +28,8 @@
 </head>
 <body>
     <div class="box"></div>
+    <div class="box"></div>
+    <button class="backward">backward</button>
+    <button class="forward">forward</button>
 </body>
 </html>
