--- a/javascript/ex34.html
+++ b/javascript/ex34.html
@@ -5,19 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/box-transform.js"></script>
-    <script>
-        
-    </script>
 </head>
 <body>
 
-    <div class="box"></div>
-    <button class="backward">backward</button>
-    <button class="forward">forward</button>
-
-
-
-    
+    <script>
+        document.write(location.href);
+        setTimeout(function(){
+            location.href='http://127.0.0.1:5500/ex34.html'
+        },5000);
+    </script>
 </body>
 </html>
